@@ -42,7 +42,6 @@
     <surefire.add-opens.argLine>
       -XX:+IgnoreUnrecognizedVMOptions
       --add-opens=java.base/java.nio=ALL-UNNAMED
-      --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
     </surefire.add-opens.argLine>
     <java.version>8</java.version>
     <junit.version>4.13.1</junit.version>
